vlib/v/checker/tests/enum_field_value_duplicate_b.vv
enum Color {
	red // 0
	green = -1
	blue // -1 + 1 = 0
}
